--- a/app/src/main/res/layout/fragment_bill_history.xml
+++ b/app/src/main/res/layout/fragment_bill_history.xml
@@ -83,7 +83,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:visibility="gone"
-    android:background="@color/white">
+    android:background="@color/white_n_black">
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
