--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,49 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="gray">#D3D3D3</color>
-    <color name="white">#ffffff</color>
+    <color name="white_n_black">#ffffff</color>
     <color name="green">#00D100</color>
     <color name="darker_green">#027148</color>
     <color name="darker_red">#32012C</color>
     <color name="red">#FF0000</color>
-    <color name="main_color">#0B5E8C</color>
 
+    <color name="main_color">#0B5E8C</color>
     <color name="colorThumbChecked">#0B5E8C</color>
     <color name="colorThumbUnchecked">#B0BEC5</color>
     <color name="colorTrackChecked">#96B6C5</color>
     <color name="colorTrackUnchecked">#CFD8DC</color>
 
-    <color name="text_color_primary">#97959c</color>
     <color name="colorPrimaryDark">#0B5E8C</color>
     <color name="colorPrimary">#0B5E8C</color>
-    <color name="background_color_lite">#b0a5ab</color>
-
-    <color name="nuemph_shadow_dark">#96B6C5</color>
-
-    <color name="background_color">#FBFCF6</color>
-    <color name="background_color_popup">#FBFCF6</color>
-
-
     <color name="popup">#EEE0C9</color>
-    <color name="colorAccent">#EEE0C9</color>
-    <color name="colorPrimaryLight">#EEE0C9</color>
-    <color name="nuemph_shadow_light">#EEE0C9</color>
 
     <color name="lite_grey">#D3D3D3</color>
     <color name="lite_grey_200">#F0F0F0</color>
 
-
-
-    <color name="icon_color_main">#000</color>
     <color name="text_color_main">#000</color>
     <color name="text_color_heading">#000</color>
     <color name="text_color_heading_reverse">#fff</color>
+
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
